CSS 2.1 failure: outline-color-applies-to* tests fail https://bugs.webkit.org/show_bug.cgi?id=71944

Reviewed by Julien Chaffraix.

Source/WebCore:

Paint the outline color for row, row-group, header-group and footer-group
elements.

Tests: css2.1/20110323/outline-color-applies-to-001.htm
       css2.1/20110323/outline-color-applies-to-002.htm
       css2.1/20110323/outline-color-applies-to-003.htm
       css2.1/20110323/outline-color-applies-to-004.htm
       css2.1/20110323/outline-color-applies-to-005.htm
       css2.1/20110323/outline-color-applies-to-006.htm
       css2.1/20110323/outline-color-applies-to-007.htm
       css2.1/20110323/outline-color-applies-to-008.htm
       css2.1/20110323/outline-color-applies-to-009.htm
       css2.1/20110323/outline-color-applies-to-010.htm
       (There is no outline-color-applies-to-011.htm in the test suite.)
       css2.1/20110323/outline-color-applies-to-012.htm
       css2.1/20110323/outline-color-applies-to-013.htm
       css2.1/20110323/outline-color-applies-to-014.htm
       css2.1/20110323/outline-color-applies-to-015.htm
       fast/css/outline-color-self-painting-row.htm

* rendering/RenderTableRow.cpp:
(WebCore::RenderTableRow::paintOutlineForRowIfNeeded): Wrapper function for painting the outline for the row.
 This is used by RenderTableSection::paintObject and RenderTableRow::paint
(WebCore::RenderTableRow::paint): For rows with a self-painting layer, paint the outline. Tested by
 fast/css/outline-color-self-painting-row.htm.
* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::paint): Paint the outline for header-group, row-group and footer-groups.
(WebCore::RenderTableSection::paintObject): When iterating through the cells paint the outline of rows as required.
Doing it here avoids the need to walk the RenderTableSection's tree separately elsewhere.

LayoutTests:

* css2.1/20110323/outline-color-applies-to-001-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-001.htm: Added.
* css2.1/20110323/outline-color-applies-to-002-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-002.htm: Added.
* css2.1/20110323/outline-color-applies-to-003-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-003.htm: Added.
* css2.1/20110323/outline-color-applies-to-004-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-004.htm: Added.
* css2.1/20110323/outline-color-applies-to-005-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-005.htm: Added.
* css2.1/20110323/outline-color-applies-to-006-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-006.htm: Added.
* css2.1/20110323/outline-color-applies-to-007-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-007.htm: Added.
* css2.1/20110323/outline-color-applies-to-008-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-008.htm: Added.
* css2.1/20110323/outline-color-applies-to-009-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-009.htm: Added.
* css2.1/20110323/outline-color-applies-to-010-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-010.htm: Added.
* css2.1/20110323/outline-color-applies-to-012-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-012.htm: Added.
* css2.1/20110323/outline-color-applies-to-013-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-013.htm: Added.
* css2.1/20110323/outline-color-applies-to-014-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-014.htm: Added.
* css2.1/20110323/outline-color-applies-to-015-expected.html: Added.
* css2.1/20110323/outline-color-applies-to-015.htm: Added.
* fast/css/outline-color-self-painting-row-expected.html: Added.
* fast/css/outline-color-self-painting-row.htm: Added.

Canonical link: https://commits.webkit.org/93154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105021 268f45cc-cd09-0410-ab3c-d52691b4dbfc